# snowpark_fundamentals

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: codeql.yml  pre-commit.yml  python-lint.yml  python-tests.yml  python-typecheck.yml  security-scan.yml
dbt_feature_store/: README.md  dbt_project.yml  profiles.yml
dbt_feature_store/macros/: feature_helpers.sql  time_windows.sql
dbt_feature_store/models/features/: _features.yml  fct_customer_behavior.sql  fct_customer_derived.sql  fct_customer_rfm.sql
dbt_feature_store/models/marts/: _mart_features.yml  fct_churn_features.sql
dbt_feature_store/models/staging/: _sources.yml  _staging.yml  stg_customers.sql  stg_orders.sql
dbt_feature_store/tests/: test_grain_uniqueness.sql  test_value_ranges.sql
notebooks/: 01_snowpark_dataframes.ipynb  02_data_preprocessing.ipynb  03_model_training.ipynb  04_model_registry.ipynb  05_end_to_end_pipeline.ipynb  06_feature_store_concepts.ipynb  07_feature_engineering_sql.ipynb  08_feature_views.ipynb  09_training_sets.ipynb  10_model_versioning.ipynb  11_model_lifecycle.ipynb  12_feature_store_to_registry.ipynb  13_production_patterns.ipynb  14_capstone_challenge.ipynb  14_capstone_challenge_SOLUTION.ipynb  15_model_training_at_scale.ipynb  16_distributed_training_compute_pools.ipynb
notebooks/onsite/: README.md
notebooks/onsite/day1/: 17_experimentation_model_training.ipynb  18_model_validation_registration.ipynb  19_deployment_serving_monitoring.ipynb
notebooks/onsite/day2/: 20_advanced_snowpark_patterns.ipynb  21_udfs_realworld_patterns.ipynb
notebooks/onsite/day3/: 22_exercise_classification.ipynb  (+1 more)
src/snowpark_fundamentals/: __init__.py  config.py  session.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_distributed.py  test_feature_store_data.py  test_feature_store_entities.py  test_feature_store_training.py  test_feature_store_views.py  test_modeling.py  test_preprocessing.py  test_registry.py  test_tuning.py
(+19 files in other folders)
